Add week 1 details

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                                 Python programming language and learn how to write your first of many programs.
                             </p>
                             <div class="mt-auto">
-                                <a href="#" class="btn btn-primary">Learn More</a>
+                                <a href="/curriculum#week-1-container" class="btn btn-primary">Learn More</a>
                             </div>
                         </div>
                     </div>
