Update CS Zero program description

--- a/about.html
+++ b/about.html
@@ -33,7 +33,13 @@
 
     <main class="container">
         <h1>About CS Zero</h1>
-        <p>This is a coding summer program designed to introduce students to the basics of computer science. The course covers a variety of topics over a span of three weeks, with each week focusing on a different aspect of computer science.</p>
+        <p>
+            The CS Zero program introduces the fundamentals of coding and computer science in all of its diverse forms
+            to students with no prior experience. Modeled on the Friends CS program, CS Zero is a three-week course
+            that covers the basics of computation, programming, electronics, and digital creative expression. CS Zero
+            is available to both Friends students and faculty as well as the general public. See the enrollment page
+            for more information.
+        </p>
         <h2>Course Objectives</h2>
         <p>The main objective of this course is to provide students with a solid foundation in computer science. By the end of the course, students should be able to understand basic programming concepts and be able to write simple programs.</p>
         <h2>Instructors</h2>
